--- a/ModernUI.Xceed/ModernUI.Xceed.Toolkit/ModernUI.Xceed.Toolkit.csproj
+++ b/ModernUI.Xceed/ModernUI.Xceed.Toolkit/ModernUI.Xceed.Toolkit.csproj
@@ -103,6 +103,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Assets\Controls\PropertyGrid.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Assets\Controls\SelectorItem.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -133,7 +137,17 @@
     </Page>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Assets\Images\AdvancedProperties11.png" />
+    <Resource Include="Assets\Images\Categorize16.png" />
+    <Resource Include="Assets\Images\ClearFilter16.png" />
+    <Resource Include="Assets\Images\Database11.png" />
+    <Resource Include="Assets\Images\Inheritance11.png" />
+    <Resource Include="Assets\Images\Local11.png" />
+    <Resource Include="Assets\Images\Resource11.png" />
+    <Resource Include="Assets\Images\SortAscending16.png" />
+    <Resource Include="Assets\Images\Style11.png" />
+  </ItemGroup>
   <ItemGroup>
     <Page Include="Assets\Controls\NumericUpDown.xaml">
       <SubType>Designer</SubType>
