[add] example application icon.

--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/ModernUI.Xceed.Toolkit.Example.csproj
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.Toolkit.Example/ModernUI.Xceed.Toolkit.Example.csproj
@@ -74,6 +74,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\Icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="FirstFloor.ModernUI, Version=1.0.9.0, Culture=neutral, PublicKeyToken=bc9b0c37bf06c6a9, processorArchitecture=MSIL">
       <HintPath>..\..\packages\ModernUI.WPF.1.0.9\lib\net45\FirstFloor.ModernUI.dll</HintPath>
@@ -207,6 +210,9 @@
       <Project>{5a634859-f873-42b4-a533-f05404a22378}</Project>
       <Name>ModernUI.Xceed.Toolkit</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
