[add] MaskedTextBox style.

--- a/ModernUI.Xceed/ModernUI.Xceed.Toolkit/ModernUI.Xceed.Toolkit.csproj
+++ b/ModernUI.Xceed/ModernUI.Xceed.Toolkit/ModernUI.Xceed.Toolkit.csproj
@@ -130,6 +130,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Assets\Controls\MaskedTextBox.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Assets\Controls\PropertyGrid.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
