[add] RangeSlider style.

--- a/ModernUI.Xceed/ModernUI.Xceed.Toolkit/ModernUI.Xceed.Toolkit.csproj
+++ b/ModernUI.Xceed/ModernUI.Xceed.Toolkit/ModernUI.Xceed.Toolkit.csproj
@@ -142,6 +142,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Assets\Controls\RangeSlider.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Assets\Controls\SelectorItem.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
