[add] controls for expander and tabcontrol to the example project.
Currently the controls are not styled.

--- a/ModernUI.Xceed/Examples/ModernUI.Standard.Controls.Example/ModernUI.Standard.Controls.Example.csproj
+++ b/ModernUI.Xceed/Examples/ModernUI.Standard.Controls.Example/ModernUI.Standard.Controls.Example.csproj
@@ -74,6 +74,12 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\Icon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>ModernUI.Xceed.AvalonDock.Example.App</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="FirstFloor.ModernUI, Version=1.0.9.0, Culture=neutral, PublicKeyToken=bc9b0c37bf06c6a9, processorArchitecture=MSIL">
       <HintPath>..\..\packages\ModernUI.WPF.1.0.9\lib\net45\FirstFloor.ModernUI.dll</HintPath>
@@ -127,6 +133,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Pages\Expander.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Pages\GroupBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -134,6 +144,10 @@
     <Page Include="Pages\License.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\TabControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
@@ -143,11 +157,17 @@
     <Compile Include="Pages\ControlsRoot.xaml.cs">
       <DependentUpon>ControlsRoot.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\Expander.xaml.cs">
+      <DependentUpon>Expander.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\GroupBox.xaml.cs">
       <DependentUpon>GroupBox.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\License.xaml.cs">
       <DependentUpon>License.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\TabControl.xaml.cs">
+      <DependentUpon>TabControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -176,14 +196,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\ModernUI.Standard.Controls\ModernUI.Standard.Controls.csproj">
       <Project>{64a84980-cbcb-42aa-a048-ebf9b922020a}</Project>
       <Name>ModernUI.Standard.Controls</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
