--- a/ModernUI.Xceed/ModernUI.Standard.Controls/packages.config
+++ b/ModernUI.Xceed/ModernUI.Standard.Controls/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xceed.Products.Wpf.Toolkit.AvalonDock" version="3.1.16356.12170" targetFramework="net452" />
-  <package id="Xceed.Wpf.AvalonDock" version="3.1.16356.12170" targetFramework="net452" />
+  <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net452" />
+  <package id="ModernUI.WPF" version="1.0.9" targetFramework="net452" />
 </packages>
