Set an icon on the avalon dock example.

--- a/ModernUI.Xceed/Examples/ModernUI.Xceed.AvalonDock.Example/ModernUI.Xceed.AvalonDock.Example.csproj
+++ b/ModernUI.Xceed/Examples/ModernUI.Xceed.AvalonDock.Example/ModernUI.Xceed.AvalonDock.Example.csproj
@@ -74,6 +74,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\Icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="FirstFloor.ModernUI, Version=1.0.9.0, Culture=neutral, PublicKeyToken=bc9b0c37bf06c6a9, processorArchitecture=MSIL">
       <HintPath>..\..\packages\ModernUI.WPF.1.0.9\lib\net45\FirstFloor.ModernUI.dll</HintPath>
@@ -176,9 +179,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\ModernUI.Xceed.AvalonDock\ModernUI.Xceed.AvalonDock.csproj">
       <Project>{10fae934-1213-48f3-99f7-3ddc7a196838}</Project>
@@ -188,6 +189,9 @@
       <Project>{5a634859-f873-42b4-a533-f05404a22378}</Project>
       <Name>ModernUI.Xceed.Toolkit</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
