--- a/ModernUI.Xceed/ModernUI.Standard.Controls/packages.config
+++ b/ModernUI.Xceed/ModernUI.Standard.Controls/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net452" />
   <package id="ModernUI.WPF" version="1.0.9" targetFramework="net452" />
+  <package id="NuGet.CommandLine" version="4.5.1" targetFramework="net452" developmentDependency="true" />
+  <package id="NuGet.Packer" version="1.2.10" targetFramework="net452" developmentDependency="true" />
 </packages>
