Start stying the Expander control

--- a/ModernUI.Xceed/ModernUI.Standard.Controls/ModernUI.Standard.Controls.csproj
+++ b/ModernUI.Xceed/ModernUI.Standard.Controls/ModernUI.Standard.Controls.csproj
@@ -90,6 +90,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Assets\Controls\Expander.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Assets\Controls\GroupBox.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
