--- a/ModernUI.Xceed/ModernUI.Standard.Controls/ModernUI.Standard.Controls.csproj
+++ b/ModernUI.Xceed/ModernUI.Standard.Controls/ModernUI.Standard.Controls.csproj
@@ -98,6 +98,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Assets\Controls\TabControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Assets\ModernUI.Standard.Controls.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
